assets/static/src/main.css
@import "hint.css/hint.css";
@import "github-markdown-css/github-markdown-light.css";
@import "./markdown.css";
@import "./dropzone.css";

body {
  background-color: #e8ecf0;
  color: #556a7f;

  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    "Apple Color Emoji",
    "Segoe UI Emoji",
    Segoe UI Symbol,
    "Noto Color Emoji";
  font-size: 14px;
}

#container {
  display: flex;
  flex-direction: column;
  justify-self: center;
  max-width: 800px;
}

@media (min-width: 600px) {
  #container {
    min-width: 500px;
  }
}

#header {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: space-between;
}

#header a {
  text-decoration: none;
  color: #556a7f;
}

#navigation {
  list-style: none;
  padding: 0 0 12px;
  margin: 0 0 0 12px;

  > li {
    display: inline-block;

    + li {
      border-left: 1px solid gray;
      padding-left: 8px;
      margin-left: 8px;
    }
  }

  a {
    text-decoration: none;
    border-bottom: 1px dotted #556a7f;
    color: #556a7f;

    &:hover {
      background-color: #c7d1eb;
    }
  }
}

#main {
  background-color: white;

  padding: 6px 5px 8px 5px;

  box-shadow: 1px 1px 1px 1px #ccc;

  text-align: center;

  a {
    color: #556a7f;
  }
}

#normal-content {
  word-wrap: break-word;
}

#normal-code {
  margin-top: 0;
  margin-bottom: 0;
}

.dinfo {
  box-shadow: 1px 1px 1px 1px #ccc;
  margin-bottom: 15px;
}

#info {
  background-color: white;
  padding: 10px;

  a {
    text-decoration: none;
    color: #556a7f;

    &:hover {
      border-bottom: 1px dotted gray;
      background-color: #e8ecf0;
    }
  }

  input[type="checkbox"] {
    margin: 0;
    vertical-align: bottom;
  }

  input[type="text"] {
    border: 1px solid #eaeaea;
    color: #556a7f;
    padding: 2px 4px;
    font-family:
      ui-sans-serif,
      system-ui,
      sans-serif,
      "Apple Color Emoji",
      "Segoe UI Emoji",
      Segoe UI Symbol,
      "Noto Color Emoji";
  }
}

.info-flex {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: space-between;
}

.info-actions {
  list-style: none;
  padding: 0;
  margin: 0 0 0 9px;
  font-size: 13px;

  a {
    text-decoration: none;
    border-bottom: 1px dotted #556a7f;
  }

  > li {
    display: inline-block;

    + li {
      border-left: 1px solid #849aae;
      padding-left: 6px;
      margin-left: 6px;
    }
  }
}

#info #extension,
#editform #extension {
  width: 40px;
}

#footer {
  color: gray;
  text-align: right;
  margin-top: 30px;
  margin-bottom: 10px;
  font-size: 11px;

  a {
    color: gray;
    text-decoration: none;
  }
}

.normal {
  text-align: left;
  font-size: 13px;

  a {
    text-decoration: none;
    border-bottom: 1px dotted gray;

    &:hover {
      color: black;
      background-color: #e8ecf0;
    }
  }
}

.normal {
  ul {
    padding-left: 15px;
  }

  li {
    margin-bottom: 3px;
    list-style: none;

    a {
      font-weight: bold;
    }
  }
}

.fixed {
  width: 80vw;
  max-width: 800px;
}

.paste {
  width: 70vw;
  max-width: 700px;
}

.needs-border {
  border-top: 1px solid rgb(214, 214, 214);
}

.left {
  text-align: left;
}

.float-left {
  float: left;
}

.pad-left {
  padding-left: 10px;
}

.pad-right {
  padding-right: 10px;
}

.text-right {
  text-align: right;
}

.center {
  text-align: center;
}

.float-right,
.right {
  float: right;
}

.clear {
  clear: both;
}

#upload_header {
  text-align: center;
  font-size: 18px;
}

#file-uploader a {
  text-decoration: none;
  border-bottom: 1px dotted #556a7f;
  color: #556a7f;
  font-weight: bold;
}

#filesUploaded {
  display: none;
  text-align: left;
}

#linx_display_links {
  display: none;
  padding: 20px;
  background-color: #00aff5;
  border: 3px solid #6bacf5;
  margin-top: 15px;
  margin-bottom: 10px;
  font-size: 12px;
}

#supported_files {
  display: none;
  text-align: left;
}

#upload_btn {
  background-color: white;
  border: 2px solid #c9c9c9;
  width: 90px;
  height: 30px;
}

#expires {
  width: 75px;
}

#choices {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  margin-top: 5px;
  font-size: 13px;
}

#expiry {
  padding-top: 1px;
}

#randomize {
  vertical-align: bottom;
  margin: 0;
}

#access_key {
  min-width: 100%;
  line-height: 1.3em;
}

#access_key_checkbox {
  margin: 0;
}

#access_key_input {
  padding: 0;
  display: none;
}

.oopscontent {
  img {
    width: 400px;
    border: 0;
  }
}

.error-404 img {
  max-width: 90vw;
}

.padme {
  padding-left: 5px;
  padding-right: 5px;
}

.editor {
  width: 100%;
  height: 450px;
  border: 1px solid #eaeaea;
  font-family: monospace;
  resize: none;
  overflow: auto;
  border-radius: 2px;
  padding: 2px;
  box-sizing: border-box;
}

/* Content display {{{ */
.display-audio,
.display-file {
  width: 100%;
}

.display-image {
  margin-bottom: -6px;
  max-width: 800px;
}

.display-pdf {
  width: 910px;
  height: 800px;
}

.display-video {
  width: 800px;
  max-height: 70vh;
}

.scrollable {
  overflow: auto;
}

#editform,
#editform .editor {
  display: none;
  width: 100%;
}

#codeb {
  white-space: pre-wrap;
}

#inplace-editor {
  display: none;
  width: 100%;
  height: 800px;
  font-size: 13px;
}

